--- a/RazorPagesMovie/appsettings.json
+++ b/RazorPagesMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-29b654b9-7671-4044-b73f-484eb2fbd27a;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
